notes about publishing with correct URLs

--- a/podsrc/_config.yml
+++ b/podsrc/_config.yml
@@ -13,10 +13,15 @@ subtitle: "A discussion from the intersection of life & technology."
 lang: en-us
 author: Sumu Tasib
 copyright: "&#xA9; 2021"
+
+# URL settings (choose remote or local)
+# remote settings
 baseurl: "/podcast" # the subpath of your site, e.g. /blog
 url: "http://queerkahani.com" # the base hostname & protocol for your site
+# local (development) settings
 # baseurl: "file:///C:/git/sumutasib/sumutasib.github.io/podcast" # the subpath of your site, e.g. /blog
 # url: "http://sumutasib.github.io" # the base hostname & protocol for your site
+
 twitter_username: sumutasib
 github_username:  sumutasib
 
