updating images and feed

--- a/podsrc/_config.yml
+++ b/podsrc/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Queer Kahani - The Podcast
+title: Queer Kahani
 email: sumu.tasib@gmail.com
-description: "Link Rot is a discussion held at the intersection of life and technology. Each week we dive into a subject that explores the changes going on in digital technology and the way it affects our lives. We discuss how technology impacts our very humanity and aim to have some fun along the way!"
-subtitle: "A discussion from the intersection of life & technology."
+description: "Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between."
+subtitle: "A place for queer stories"
 lang: en-us
 author: Sumu Tasib
 copyright: "&#xA9; 2021"
