--- a/podsrc/_config.yml
+++ b/podsrc/_config.yml
@@ -17,7 +17,7 @@ copyright: "&#xA9; 2021"
 # URL settings (choose remote or local)
 # remote settings
 baseurl: "/podcast" # the subpath of your site, e.g. /blog
-url: "http://queerkahani.com" # the base hostname & protocol for your site
+url: "https://queerkahani.com" # the base hostname & protocol for your site
 # local (development) settings
 # baseurl: "file:///C:/git/sumutasib/sumutasib.github.io/podcast" # the subpath of your site, e.g. /blog
 # url: "http://sumutasib.github.io" # the base hostname & protocol for your site
