updating header to contain facebook embed info and description to include URL

--- a/podsrc/_config.yml
+++ b/podsrc/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Queer Kahani
 email: sumu.tasib@gmail.com
-description: "Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between."
+description: "Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com"
 subtitle: "A place for queer stories"
 lang: en-us
 author: Sumu Tasib
